<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="CoEDrive_Ctrl_Adr_typ" Id="{8eb99bb5-312a-09b6-32d0-3196b6d59eb6}">
    <Declaration><![CDATA[TYPE CoEDrive_Ctrl_Adr_typ :
STRUCT
	//output
	ControlWord      : CoE_Obj_typ;
	HomingMethod     : CoE_Obj_typ;
	HomingSWSpeed    : CoE_Obj_typ;//switch speed
	HomingTrSpeed    : CoE_Obj_typ;//Trigger spedd
	HomingAcc        : CoE_Obj_typ;
	HomeOffset       : CoE_Obj_typ;
	OperationMode    : CoE_Obj_typ;
	//Velocty Ctrl KV
	KpSpeed    		: CoE_Obj_typ;
	KISpeed    		: CoE_Obj_typ;
	GainScheduler   : CoE_Obj_typ;
	AccClosePosErr  : CoE_Obj_typ;
	//
	TorqueOffset : CoE_Obj_typ;
	MaxTorque    : CoE_Obj_typ;
	RatedCurrent     : CoE_Obj_typ;
	MaxCurrent    	 : CoE_Obj_typ;
	PositionErrorWin : CoE_Obj_typ; // Position error Window
	//input
	StatusWord       : CoE_Obj_typ;
	DCVoltage        : CoE_Obj_typ;
	
	
	
	ParamsVersionObj : CoE_Obj_typ;
	FWVersionObj     : CoE_Obj_typ;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>