<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="eCaOpDriveModeOfOperation" Id="{50549bf8-3726-033d-1a06-b2b02c4ae290}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eCaOpDriveModeOfOperation :
(
	ProfilePositionMode				:= 1,
	VelocityCtrMode    				:= 2,
	ProfileVelocityMode 	   	    := 3,
	TorqueVelocityMode 				:= 4,
	HomingMode				    	:= 6,
	InterpolationPosMode			:= 7,
	CyclicSyncMode					:= 8
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>